[fix](build) Remove complicated dependsOn